--- a/euro/templates/euro/userteam.html
+++ b/euro/templates/euro/userteam.html
@@ -18,4 +18,13 @@
     <input type="submit" value="Update">
 </form>
 </div>
+
+
+
+<form method="POST" action="{% url 'euro:teams' %}">{% csrf_token %}
+    {{TeamFrom.as_p}}
+    <input type="submit" value="Update">
+</form>
+
+
 {% endblock form %}
