--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -140,7 +140,54 @@
     {% endif %}
 
     
-{% if user.team %}
+{% if user.team %}{%if self == user %}
+    
+<div id="team_leave" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title"><i class="fa fa-chain-broken" aria-hidden="true"></i> Leave team</h4>
+            </div>
+            <div class="modal-body">
+                <form id="leave_team">
+                    {% csrf_token %}
+                    <div class="login-form">
+                        <div class="form-group">
+
+                            <h3>You will leave: <h3>
+                            <h2>{{user.team.name}}</h2>
+                                                
+                            </div>
+                             
+                        </div>
+                        <!--a class="link" href="#">Lost your password?</a-->
+                        <button type="submit" class="log-btn" id="saveChange_team" style="margin-top: 20px;">Leave <i class="glyphicon glyphicon-ok" aria-hidden="true"></i></button>
+                        <button type="submit" data-dismiss="modal" class="log-btn wrong-entry" style="margin-top: 20px;">Cancel <i class="glyphicon glyphicon-remove" aria-hidden="true"></i></button>
+
+                </form>
+                <script>
+                                    
+                    $( "#leave_team" ).submit(function( e ) {
+                        console.log("save")
+                        
+        e.preventDefault();
+
+        var values = {};
+        values['csrfmiddlewaretoken']=$('input[name=csrfmiddlewaretoken]').val()
+        values['id_team'] = 'None'
+        console.log(values)
+        $.post("{% url 'euro:change_team' %}", values, formSave.success, 'json').error(formSave.error); // making ajax post
+        });
+
+                </script>
+            </div>
+            </div>
+        </div>
+    </div>
+{% endif %}
 {% else %}{%if self == user %}
 
 
@@ -160,11 +207,11 @@
                         <div class="form-group">
 
                             <label for="tags">Select an existing: </label>
-                            <div class="form-group ">
+                            <div class="selectContainer">
                              <select id="id_team" name="team" class="form-control">
-                                 <option class="form-control" value="None" style="margin : 5px;">None</option>
+                                 <option style="padding:10px;" value="None">None</option>
                                  {% for member in allTeams.all %}                                    
-                                    <option class="form-control" value="{{member.id}}" >{{member}}</option>
+                                    <option style="padding:10px;" value="{{member.id}}" >{{member}}</option>
                                  {% endfor %}
                              </select>
                             </div>
@@ -193,8 +240,10 @@
                             $('#group_name').val("New team")
                         }
                     })
+                    
                     $( "#change_team" ).submit(function( e ) {
                         console.log("save")
+                        
         e.preventDefault();
 
         var values = {};
