--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -148,11 +148,11 @@
                         {% csrf_token %}
                         <div class="login-form">
                             <div class="form-group ">
-                                <input type="text" class="form-control" placeholder="Username " id="username" name="username" />
+                                <input type="text" class="form-control" placeholder="Username " id="username" name="username" aria-hidden="true"/>
                                 <i class="fa fa-user"></i>
                             </div>
                             <div class="form-group log-status">
-                                <input type="password" class="form-control" placeholder="Password" id="password" name="password" />
+                                <input type="password" class="form-control" placeholder="Password" id="password" name="password" aria-hidden="true"/>
                                 <i class="fa fa-lock"></i>
                             </div>
 
@@ -185,20 +185,20 @@
                         {% csrf_token %}
                         <div class="login-form">
                             <div class="form-group ">
-                                <input type="text" class="form-control" placeholder="Username " id="username" name="username" required />
+                                <input type="text" class="form-control" placeholder="Username " id="username" name="username" required aria-hidden="true"/>
                                 <i class="fa fa-user"></i>
                             </div>
                             <div class="form-group ">
-                                <input type="text" class="form-control" placeholder="Email " id="email" name="email" required />
+                                <input type="text" class="form-control" placeholder="Email " id="email" name="email" required aria-hidden="true"/>
                                 <i class="fa fa-envelope"></i>
                             </div>
                             <div class="form-group log-status">
-                                <input type="password" class="form-control" placeholder="Password" id="password" name="password" required />
+                                <input type="password" class="form-control" placeholder="Password" id="password" name="password" required aria-hidden="true"/>
                                 <i class="fa fa-lock"></i>
                             </div>
                             <label>Repeat:</label>
                             <div class="form-group log-status">
-                                <input type="password" class="form-control" placeholder="Password" id="password2" name="password2" required />
+                                <input type="password" class="form-control" placeholder="Password" id="password2" name="password2" required aria-hidden="true"/>
                                 <i class="fa fa-lock"></i>
                             </div>
                             <!--a class="link" href="#">Lost your password?</a-->
