--- a/euro/templates/euro/home.html
+++ b/euro/templates/euro/home.html
@@ -8,13 +8,26 @@
 
   <div class="jumbotron">
       <h1>
-          <a href="#" title="change avatar" data-target="#upload_avatar" data-toggle="modal">
+          <span>
+          <a href="#" title="change avatar" data-target="#upload_avatar" data-toggle="modal" class="big_avatar">
           {% if user.avatar %}      
-          <img src="{{user.avatar}}" alt = "avatar"/>
+            <span style="font-size : 1px;">  
+          <img src="{{MEDIA_URL}}{{user.avatar}}" alt = "avatar"/>
+                <span class = "movedLeft">
+              <i class="glyphicon glyphicon-upload" aria-hidden = "true" style="font-size:18px;"></i>
+                    </span>
+                </span>
           {% else %}
-          <img src='{% static "euro/images/256.jpg" %}' alt="no avatar"/>
+              <span style="font-size : 1px;">  
+          <img src='{% static "euro/images/256.jpg" %}' alt="no avatar" style="width:128px;height:128px"/>
+                <span class = "movedLeft">
+              <i class="glyphicon glyphicon-upload" aria-hidden = "true" style="font-size:18px;"></i>
+                    </span>
+                </span>
+          
           {% endif %}
-          </a>      
+          </a>&nbsp; 
+          </span>
           {{user.user.username|capfirst}} </h1>      
       
       {% if user.team %}<h2><i><a href="{% url 'euro:team' user.team.id %}">{{user.team.name|capfirst}}</a></i></h2>
