--- a/euro/templates/euro/nexts.html
+++ b/euro/templates/euro/nexts.html
@@ -39,23 +39,23 @@
                     <span class='pays'>{{rencontre.pays1}}</span>
                     
                     {% if username %}
-                    {% if rencontre.allowNull == False %}
+                    
                     <label>
-                            <input class="entry" id = 'score_{{rencontre.id}}_radio_1' type="radio" name="score_{{rencontre.id}}_radio" value="1" {% if pronostics|winner:rencontre == 1 %}checked='checked'{% endif %}/>
+                            <input class="entry" {% if rencontre.allowNull = True %}disabled='disabled'{% endif %} id = 'score_{{rencontre.id}}_radio_1' type="radio" name="score_{{rencontre.id}}_radio" value="1" {% if pronostics|winner:rencontre == 1 %}checked='checked'{% endif %}/>
                             <img src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />
                     </label>
-                    {% endif %}
+                    
                     
                     <input class="score entry" type="number" id="score_{{rencontre.id}}_1" min="0" value="{{pronostics|score1:rencontre}}"/>
                 
                     <input class="score entry" type="number" id="score_{{rencontre.id}}_2" min="0" value="{{pronostics|score2:rencontre}}"/>
                     
-                    {% if rencontre.allowNull == False %}
+                    
                     <label>
-                            <input class="entry" id = 'score_{{rencontre.id}}_radio_2' type="radio" name="score_{{rencontre.id}}_radio" value="2" {% if pronostics|winner:rencontre == 2 %}checked='checked'{% endif %}/>
+                            <input class="entry" {% if rencontre.allowNull = True %}disabled='disabled'{% endif %} id = 'score_{{rencontre.id}}_radio_2' type="radio" name="score_{{rencontre.id}}_radio" value="2" {% if pronostics|winner:rencontre == 2 %}checked='checked'{% endif %}/>
                             <img src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />
                     </label>
-                    {% endif %}
+                    
                     
                     <script type="text/javascript">
                         var winf = function () {
@@ -70,8 +70,10 @@
                                     $('#score_{{rencontre.id}}_radio_1').prop('disabled',true)
                                 }
                                 else {
-                                    $('#score_{{rencontre.id}}_radio_2').prop('disabled',false)
-                                    $('#score_{{rencontre.id}}_radio_1').prop('disabled',false)
+                                    $('#score_{{rencontre.id}}_radio_2').prop('disabled',{% if rencontre.allowNull = False %}false{% else %}true{% endif %})
+                                    $('#score_{{rencontre.id}}_radio_1').prop('disabled',{% if rencontre.allowNull = False %}false{% else %}true{% endif %})
+                                    $('#score_{{rencontre.id}}_radio_2').prop("checked", false)
+                                    $('#score_{{rencontre.id}}_radio_1').prop("checked", false)
                                 }
         
                         }
