--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -1,10 +1,12 @@
 {% load staticfiles %}
 {% load nav_active %}
-
-<html>
+<!doctype html>
+<html lang='fr'>
 
 <head>
+    <meta charset="utf-8">
     <title>Euro 2016</title>
+    
     <link rel="shortcut icon" type="image/png" href="{% static 'euro/images/favicon.png' %}"/>
     <link rel="stylesheet" href="{% static 'euro/vendor/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'euro/vendor/bootstrap-theme.min.css' %}">
